<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    android:fillViewport="true"
    tools:context="com.baza1234.qlakp4music.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logobg"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/musicapplogobg"
                android:scaleType="centerInside"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/logo"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/aboutlogo"
                android:scaleType="centerInside"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/logoanimation"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/logo01"
                android:scaleType="centerInside"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/naglowek"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naglowek_about"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <!-- Whole Window Here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/naglowek"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about1"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="center_horizontal"/>

                <!-- PLAY -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/songtitle"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/playicon"
                        android:scaleType="centerInside"
                        android:layout_marginRight="5dp"/>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/playlogo"
                        android:scaleType="centerCrop"/>
                </LinearLayout>
                <!-- Play Text Below -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_play"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

                <!-- LIBRARY -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/songtitle"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/libraryicon"
                        android:scaleType="centerInside"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="5dp"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/librarylogo"
                        android:scaleType="centerCrop"/>
                </LinearLayout>
                <!-- Library Text Below -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_library"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>

                <!-- MARKETPLACE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/songtitle"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/shopicon"
                        android:scaleType="centerInside"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="5dp"/>

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/marketlogo"
                        android:scaleType="centerCrop"/>
                </LinearLayout>
                <!-- Marketplace Text Below -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_market"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <!-- Lower Bar -->
            <ImageView
                android:id="@+id/lowbar"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:src="@drawable/musicapplow"
                android:scaleType="centerInside"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"/>

            <!-- CHANGE ACTIVITY ICONS-->
            <LinearLayout
                android:id="@+id/hintview"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="200dp"
                android:layout_height="35dp">

                <ImageView
                    android:id="@+id/play"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/playicon"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/home"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/homeicon"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/library"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/libraryicon"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- Black Border Right and Left Lines -->
        <ImageView
            android:id="@+id/leftbar"
            android:src="@drawable/musicappleft"
            android:layout_alignParentLeft="true"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="5dp"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/rightbar"
            android:src="@drawable/musicappright"
            android:layout_alignParentRight="true"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="5dp"
            android:scaleType="centerInside" />

    </RelativeLayout>
</RelativeLayout>
